# eccodes-tutorial-code

./: .gitignore  CMakeLists.txt
eccodes-grib-tutorial-code/: CMakeLists.txt
eccodes-grib-tutorial-code/chap_03_grib_c_apis/: CMakeLists.txt
eccodes-grib-tutorial-code/chap_03_grib_c_apis/codes_get/: CMakeLists.txt  main.cpp
eccodes-grib-tutorial-code/chap_03_grib_c_apis/get_codes_info/: CMakeLists.txt  main.cpp
eccodes-grib-tutorial-code/chap_03_grib_c_apis/get_grib_info/: CMakeLists.txt  main.cpp
eccodes-grib-tutorial-code/chap_03_grib_c_apis/indexed_access/: CMakeLists.txt  main.cpp
eccodes-grib-tutorial-code/chap_03_grib_c_apis/load_from_file/: CMakeLists.txt  main.cpp
eccodes-grib-tutorial-code/chap_03_grib_c_apis/packing_type/: CMakeLists.txt  main.cpp
eccodes-grib-tutorial-code/chap_04_grib_py_apis/basic/: matplotlib_01.py  matplotlib_02.py
eccodes-grib-tutorial-code/chap_04_grib_py_apis/decode/: decode_simple.py
eccodes-grib-tutorial-code/chap_04_grib_py_apis/encode/: encode_simple.py
eccodes-grib-tutorial-code/chap_04_grib_py_apis/find_nearest/: find_nearest.py
eccodes-grib-tutorial-code/chap_04_grib_py_apis/grib_index/: grib_index.py
eccodes-grib-tutorial-code/chap_04_grib_py_apis/iterator/: iterator.py
eccodes-grib-tutorial-code/chap_05_grib_filter/: rule01.filter  rule02.filter  rule03.filter  rule04.filter  rule05.filter  rule06.filter  rule07.filter  rule08.filter  rule09.filter  rule10.filter
eccodes-grib-tutorial-code/chap_06_advanced_topics/: CMakeLists.txt
eccodes-grib-tutorial-code/data/simple/: t.t639.grib2  t.t639.grib21
(+5 files in other folders)
